--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./css/style.css">
-    <title>website</title>
+    <title>Refecator assignment</title>
 </head>
 
 <body>
