--- a/home.html
+++ b/home.html
@@ -27,7 +27,7 @@
     </nav>
     <section class="hero"></section>
     <section class="content">
-        <article class="search-engine-optimization">
+        <article id="search-engine-optimization" class="search-engine-optimization">
             <img src="./images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
